manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: weather-api
  name: weather-api
  namespace: sample-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-api
  strategy: {}
  template:
    metadata:
      labels:
        app: weather-api
    spec:
      containers:
      - image: default-route-openshift-image-registry.apps.ocp4.ocp.local/sample-app/weather-api:latest
        name: weather-api
        ports:
            - containerPort: 8080
            - containerPort: 8081
        resources: {}
        - name: ASPNETCORE_URLS
              value: "http://+:8080;http://+:8081"  # Binding to ports
            - name: WEATHER_API_URL
              value: "https://api.openweathermap.org/data/2.5/weather"  # Example weather API URL
            - name: WEATHER_API_KEY
              valueFrom:
                secretKeyRef:
                  name: weather-api-secret  # Secret containing the API key
                  key: api-key"
        livenessProbe:
          httpGet:
            path: /weatherforecast
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /weatherforecast
            port: 8080
            scheme: HTTP    
          initialDelaySeconds: 10
          periodSeconds: 10      
       
       
status: {}
