manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: weather-api
  name: weather-api
  namespace: sample-app
  annotations:
    dev.okteto.com/auto-ingress: "true"
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: weather-api
